WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104117
[WK2] InjectedBundle should check Intent url for null
https://bugs.webkit.org/show_bug.cgi?id=104117
Summary
[WK2] InjectedBundle should check Intent url for null
Jussi Kukkonen (jku)
Reported
2012-12-05 06:43:02 PST
New test fast/images/crossfade-client-not-removed-crash.html crashes on efl because we lack a null check in InjectedBundle. Attaching patch...
Attachments
Patch
(3.27 KB, patch)
2012-12-05 06:52 PST
,
Jussi Kukkonen (jku)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jussi Kukkonen (jku)
Comment 1
2012-12-05 06:52:06 PST
Created
attachment 177740
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-05 07:44:09 PST
Comment on
attachment 177740
[details]
Patch Clearing flags on attachment: 177740 Committed
r136687
: <
http://trac.webkit.org/changeset/136687
>
WebKit Review Bot
Comment 3
2012-12-05 07:44:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug