Tools: [WK2] InjectedBundle should check Intent url for null https://bugs.webkit.org/show_bug.cgi?id=104117

Patch by Jussi Kukkonen <jussi.kukkonen@intel.com> on 2012-12-05
Reviewed by Kenneth Rohde Christiansen.

WKIntentServiceInfoCopyHref() can return null, we need to check
for that in InjectedBundlePage::registerIntentServiceForFrame()
to avoid crashing.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::registerIntentServiceForFrame):

LayoutTests: [EFL] InjectedBundle should check Intent url for null
https://bugs.webkit.org/show_bug.cgi?id=104117

Patch by Jussi Kukkonen <jussi.kukkonen@intel.com> on 2012-12-05
Reviewed by Kenneth Rohde Christiansen.

EFL is slightly more verbose than chromium on this one.

* platform/efl/fast/images/crossfade-client-not-removed-crash-expected.txt: Added.

Canonical link: https://commits.webkit.org/122269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136687 268f45cc-cd09-0410-ab3c-d52691b4dbfc